--- a/client/src/summary-line/summary-line.css
+++ b/client/src/summary-line/summary-line.css
@@ -2,13 +2,14 @@
   display: flex;
   align-items: center;
   flex-grow: 1;
-  margin-right: 1.5%;
+  margin-right: 14px;
 }
 
 .summary-line-header {
-  margin-right: 4%;
+  margin-right: 42px;
 }
 
 .summary-line-container .summary-line-text {
   flex-grow: 1;
 }
+
