Completed design of budget screen and started hooking up logic for calculations

--- a/client/src/summary-line/summary-line.css
+++ b/client/src/summary-line/summary-line.css
@@ -13,3 +13,17 @@
   flex-grow: 1;
 }
 
+.summary-line-column-container {
+  display: flex;
+}
+
+.summary-line-container.summary-line-header
+.summary-line-column {
+  margin-right: 42px;
+}
+
+.summary-line-container.summary-line-header
+.summary-line-column:last-child {
+  margin-right: 0;
+}
+
