--- a/client/src/separator/separator.css
+++ b/client/src/separator/separator.css
@@ -1,14 +1,20 @@
 .separator-container {
   display: flex;
-  height: 0;
-  border: 1px solid #ddd;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 20px 10px;
+}
+
+.separator-rule {
+  color: #cdcdcd;
+  width: 100%;
+  border: 1px solid #cdcdcd;
 }
 
 .separator-text {
   background-color: #fff;
   text-decoration: underline;
   color: #999;
+  margin-top: -22px;
 }
